.hazyforge/clusters/anvil-primaris/namespace/hazyforge-academy/manifests/hazyforge-academy-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hazyforge-academy-gateway-route
  namespace: hazyforge-academy
  annotations:
    external-dns.alpha.kubernetes.io/controller: migration-preflight
spec:
  hostnames:
  - learn.hazyforge.io
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: gateway
    sectionName: https-learn
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: hazyforge-academy
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
